infra/k8s/client.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: farhanisto/client

---
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
    - name: client-cl-ip
      port: 4001
      targetPort: 4001
