infra/k8s/posts.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: farhan/posts

---
apiVersion: v1
kind: Service
metadata:
  name: post-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: posts
  ports:
    - name: posts-cluster-ip
      protocol: TCP
      port: 4000
      targetPort: 4000
